# redis-cleaner

./: .env.template  .gitignore  Cargo.toml  Dockerfile  README.md  config.yaml  notification.j2
.github/workflows/: docker-build.yml
src/: main.rs
