[package]
name = "redis-cleaner"
version = "0.1.0"
edition = "2021"
description = "This application is used to set the expiry of Redis keys based on a given pattern and time-to-live (TTL) value."
license = "MIT"

[[bin]]
name = "redis-cleaner"
path = "src/main.rs"

[dependencies]
chrono = "0.4"
clap = { version = "4.1.4", features = [ "derive" ]}
dotenv = "0.15.0"
env_logger = "0.9.0"
log = "0.4.17"
redis = { version = "0.22.3", features = ["tokio-native-tls-comp"] }
reqwest = "0.11.14"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0.91"
serde_yaml = "0.8"
tera = "1.17.1"
tokio = { version = "1.18.2", features = ["rt", "macros", "rt-multi-thread"] }
